--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
    <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/recycle"
+       android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
 
