--- a/app/src/main/res/layout/activity_autherntication.xml
+++ b/app/src/main/res/layout/activity_autherntication.xml
@@ -4,11 +4,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
+    android:padding="1dp"
     android:orientation="vertical"
+    android:background="@drawable/ic_wavesignup"
+    android:gravity="center"
     tools:context=".AuthernticationActivity">
+    <TextView
+        android:id="@+id/signuptitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="25dp"
+        android:gravity="center"
+        android:text="@string/sign_up"
+        android:textColor="@android:color/background_light"
+        android:textSize="35sp"
+        android:textStyle="bold" />
 
-    <androidx.cardview.widget.CardView
+    <EditText
+        android:id="@+id/name"
+        android:hint="@string/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/signuptitle"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#30ffffff"
+        android:drawableStart="@drawable/ic_baseline_person_outline_24"
+        android:drawablePadding="20dp"
+
+        android:importantForAutofill="no"
+        android:padding="20dp"
+        android:textColorHint="@android:color/background_light" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/name"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#30ffffff"
+        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
+        android:drawablePadding="20dp"
+        android:hint="@string/user_email"
+        android:inputType="textEmailAddress"
+        android:padding="20dp"
+        android:textColorHint="@android:color/background_light" />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/email"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#30ffffff"
+        android:drawableStart="@drawable/ic_baseline_lock_24"
+        android:drawablePadding="20dp"
+        android:hint="Enter Your Password"
+        android:inputType="textPassword"
+        android:padding="20dp"
+        android:textColorHint="@android:color/background_light" />
+
+
+ <!--   <androidx.cardview.widget.CardView
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,18 +86,22 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="100dp"
         android:layout_marginRight="5dp"
+        android:background="@drawable/ic_wavesignup"
         android:padding="10dp">
-
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:layout_height="wrap_content"
+            android:background="#DF34A0FA"
+            android:orientation="vertical"
+            android:paddingLeft="1dp"
+            android:paddingRight="1dp"
+            android:paddingBottom="8dp">
 
         <EditText
             android:id="@+id/name"
             android:hint="Name"
             android:padding="15dp"
+            android:background="#D503A9F4"
             android:inputType="textCapWords"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -50,7 +124,7 @@
             android:padding="15dp"
             android:layout_marginTop="100dp"/>
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>-->
     <LinearLayout
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
@@ -59,6 +133,7 @@
         android:weightSum="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/signup"
             android:gravity="center"
