--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -22,9 +22,12 @@
 
 
 </LinearLayout>
-<Space
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="60dp"/>
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:layout_gravity="center_vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -37,5 +40,5 @@
 
 
     </TextView>
-
+</LinearLayout>
 </LinearLayout>
